--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
