--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     ]
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "@tanstack/react-query": "^5.28.6",
+    "framer-motion": "^11.0.20",
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "next": "14.1.4",
+    "openmeteo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1"
